[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/SubMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu_Theme_1.tres" type="Theme" id=2]
[ext_resource path="res://Menu/MenuSystem.gd" type="Script" id=3]

[node name="MenuSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="TitleMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -20.0
margin_right = 20.5
margin_bottom = 20.0

[node name="buttonStart" type="Button" parent="TitleMenu/VBoxContainer"]
margin_right = 71.0
margin_bottom = 20.0
text = "START"

[node name="buttonOptions" type="Button" parent="TitleMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 71.0
margin_bottom = 44.0
text = "OPTIONS"

[node name="buttonQuit" type="Button" parent="TitleMenu/VBoxContainer"]
margin_top = 48.0
margin_right = 71.0
margin_bottom = 68.0
text = "QUIT"

[node name="OptionsMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="buttonBack" type="Button" parent="OptionsMenu"]
margin_left = 26.0
margin_top = 21.0
margin_right = 72.0
margin_bottom = 41.0
text = "BACK"

[connection signal="focus_entered" from="TitleMenu/VBoxContainer/buttonStart" to="TitleMenu" method="register_focus_as_local"]
[connection signal="mouse_entered" from="TitleMenu/VBoxContainer/buttonStart" to="TitleMenu/VBoxContainer/buttonStart" method="grab_focus"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/buttonStart" to="." method="custom_load_scene" binds= [ "res://Game.tscn" ]]
[connection signal="ready" from="TitleMenu/VBoxContainer/buttonStart" to="TitleMenu/VBoxContainer/buttonStart" method="grab_focus"]
[connection signal="focus_entered" from="TitleMenu/VBoxContainer/buttonOptions" to="TitleMenu" method="register_focus_as_local"]
[connection signal="mouse_entered" from="TitleMenu/VBoxContainer/buttonOptions" to="TitleMenu/VBoxContainer/buttonOptions" method="grab_focus"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/buttonOptions" to="." method="transition_to_menu" binds= [ "OptionsMenu" ]]
[connection signal="focus_entered" from="TitleMenu/VBoxContainer/buttonQuit" to="TitleMenu" method="register_focus_as_local"]
[connection signal="mouse_entered" from="TitleMenu/VBoxContainer/buttonQuit" to="TitleMenu/VBoxContainer/buttonQuit" method="grab_focus"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/buttonQuit" to="." method="quit"]
[connection signal="focus_entered" from="OptionsMenu/buttonBack" to="OptionsMenu" method="register_focus_as_local"]
[connection signal="mouse_entered" from="OptionsMenu/buttonBack" to="OptionsMenu/buttonBack" method="grab_focus"]
[connection signal="pressed" from="OptionsMenu/buttonBack" to="." method="transition_to_menu" binds= [ "TitleMenu" ]]
[connection signal="ready" from="OptionsMenu/buttonBack" to="OptionsMenu/buttonBack" method="grab_focus"]
